# sfml_game_development

./: CMakeLists.txt
src/: main.cpp
